<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.ssf.wilthon.eventosug.LoginActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp">

        <ImageView
            android:id="@+id/uglogo"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:scaleType="centerInside"
            android:src="@drawable/uglogo"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:text="@string/titulo_login"
            android:textAlignment="center"
            android:textColor="#0844A4"
            android:textSize="60px" />

        <EditText
            android:id="@+id/txtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_usuario"
            android:text="@string/dominio"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_pass"
            android:text="adminssf"
            android:inputType="textPassword"
            android:singleLine="false" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:background="#2196f3"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>











