<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.ssf.wilthon.eventosug.MainActivity">


    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/uglogo"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:scaleType="centerInside"
            android:src="@drawable/uglogo"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="0dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mision"
            android:textAlignment="center"
            android:textColor="#0844A4"
            android:textSize="35px"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextMision"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25px"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vision"
            android:textAlignment="center"
            android:textColor="#0844A4"
            android:textSize="35px"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TextVision"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="25px"/>

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Siguiente" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
